=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 3.01 - IN DEVELOPMENT

=over

=item *

In Krang::ElementClass::XinhaEditor fixed caching of
htmlarea.js. [Bodo Schulze]

=item *

When a user has read-only access to stories, media, and/or templates, made
buttons like Publish, Add, Checkin, etc. hidden from view. [Noam Weinstein]

=item *

When editing media, made Save and Save_and_Stay buttons automatically
publish to preview. [Noam Weinstein]

=item *

Added a new script F<bin/krang_exec> to make it really simple to run
commands against multiple Krang instances using Krang libraries, addons,
etc. [Michael Peters]

=item *

In Schedule's C<list_all> runmode show the Delete button if there
are any table rows. [Bodo Schulze]

=item *

Fixed JS function name in Krang::ElementClass::MediaLink. [Bodo
Schulze]

=item *

Fixed a bug when trying to import/export UTF-8 data. [Michael Peters]

=item *

Added inheritable/overridable methods to Krang::Handler, login_uri()
and unprotected_uri().  [Jesse Erlbaum]

=item *

Made previewing from story-edit screen validate and then display the user's
latest changes (i.e. changes they haven't yet saved). [Noam Weinstein]

=item *

Made missing-template errors show the actual name of a missing file
even if it was included by another template. [Noam Weinstein]

=item *

Added alerts notifying user if the template or media file being edited was
modified by another user or window. (This used to crash.) [Noam Weinstein]

=item *

Implemented admin perm 'admin_users_limited'.  Redirect to login
screen if user tampers with GID params. [Bodo Schulze]

=item *

Added new option --no_default to F<bin/krang_useradd> to prevent the user
being associated with group 'default'. [Bodo Schulze]

=item *

Added real-time client-side syntax-highlighting (the CodePress library) to 
the textareas used for viewing and editing Templates.  Thanks to Jesse for 