@@ -141,6 +141,22 @@ Secret '<tmpl_var Secret>'
 # ContactEmail cms@company.org
 
 #
+# These optional variables limit the number of versions
+# saved in the database for Story, Media, and Template objects.
+# The default for each is 0, meaning all versions are kept.
+#
+# For Stories, specific classes may override the universal
+# value via a method called versions_to_keep() (see TopLevel.pm)
+#
+# NOTE: Changing one of these variables does not automatically
+# prune existing versions from the database - to do that, you
+# must run the script /bin/krang_prune_versions
+#
+# SavedVersionsPerMedia 0
+# SavedVersionsPerStory 0
+# SavedVersionsPerTemplate 0
+
+#
 # This variable prevents the user from creating an unreliable number
 # of session cookies. (When absent, the default is 10.)
 #MaxConcurrentKrangSessions 10
